Added new testing your nats application blog post

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -841,6 +841,11 @@ html#home-html {
   .embed-responsive {
     margin-bottom: 30px;
   }
+  #main-con {
+    img {
+      .img-responsive();
+    }
+  }
 }
 .icon-back{
   font-size: 12px;
