Added minio to partners area

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -576,6 +576,7 @@ html#home-html {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    margin-bottom: 30px;
     a {
       display: block;
       text-align: center;
