Added icons back since we need them, also added rss link on blog home page

--- a/layouts/section/blog.html
+++ b/layouts/section/blog.html
@@ -38,6 +38,8 @@
         {{ end }}
       {{ end }}
 
+      <hr>
+      <p><a href="/blog/index.xml"><i class="fa fa-rss-square" aria-hidden="true"></i> Subscribe!</a></p>
     </div>
   </div>
 </div>
