Added websockets nats to connectors and utilities

--- a/layouts/download/single.html
+++ b/layouts/download/single.html
@@ -235,6 +235,12 @@
               <td><a target="_blank" href="https://github.com/sparrc">Cameron Sparr</a></td>
               <td>Community</td>
             </tr>
+            <tr>
+              <td><a href="https://github.com/joshglendenning/websocket-nats" target="_blank">websocket-nats</a></td>
+              <td>An in-browser websocket client for NATS, a lightweight, high-performance cloud native messaging system.</td>
+              <td><a target="_blank" href="https://github.com/joshglendenning">Josh Glendenning</a></td>
+              <td>Community</td>
+            </tr>
           </tbody>
         </table>
       </div>
