add hemera to utilities section

--- a/layouts/download/single.html
+++ b/layouts/download/single.html
@@ -241,6 +241,12 @@
               <td><a target="_blank" href="https://github.com/joshglendenning">Josh Glendenning</a></td>
               <td>Community</td>
             </tr>
+            <tr>
+              <td><a href="https://github.com/hemerajs/hemera" target="_blank">Hemera</a></td>
+              <td>A Node.js microservices toolkit for NATS.</td>
+              <td><a target="_blank" href="https://github.com/StarpTech">Dustin Deus</a></td>
+              <td>Community</td>
+            </tr>
           </tbody>
         </table>
       </div>
