--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1408,6 +1408,10 @@ ul ol,
 ol ol {
   margin-bottom: 0;
 }
+.list-bullet-indent {
+  padding-left: 40px;
+  list-style: disc;
+}
 .list-unstyled {
   padding-left: 0;
   list-style: none;
