Updated layout for new version of hugo

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -820,6 +820,29 @@ html#home-html {
 
 // Support
 #support-page {
+  .social-list {
+    img {
+      width: 32px;
+    }
+    a:hover{
+      text-decoration: none;
+    }
+    .icon-twitter,
+    .icon-google-plus,
+    .icon-github{
+      vertical-align: middle;
+      font-size: 30px;
+    }
+    .icon-twitter{
+      color: @nats-brand-twitter;
+    }
+    .icon-google-plus{
+      color: @nats-brand-google;
+    }
+    .icon-github{
+      color: @nats-brand-github-dark;
+    }
+  }
   table#support-table {
     thead {
       background: @nats-brand-blue-dark;
