--- a/layouts/section/download.html
+++ b/layouts/section/download.html
@@ -1,72 +1,8 @@
-
 {{ $.Scratch.Set "pageRelUrl" .RelPermalink }}
 {{ partial "header.html" . }}
 <div id="main-con" class="container">
   <div class="row">
     <div class="col-md-12">
-      {{ if ne .RelPermalink "/download/" }}
-      {{ .Content }}
-      {{ range $.Site.Data }}
-      {{ range .Releases }}
-
-        {{ range first 1 .github }}
-          {{ $.Scratch.Set "githubUser" .user }}
-          {{ $.Scratch.Set "githubRepo" .repo }}
-        {{ end }}
-        {{ if eq ($.Scratch.Get "pageRelUrl") ( print "/download/" ($.Scratch.Get "githubUser") "/" ($.Scratch.Get "githubRepo") "/" ) }}
-          <div class="page-header">
-            <h1>{{ .name }}{{ if not (in .name "Server") }} Client{{ end }}</h1>
-          </div>
-          <div id="download-detail-con" class="row">
-            <div class="col-lg-3 col-sm-4 detail-block left">
-              <div class="well">
-                {{ if .supported }}<p class="supported">Supported by <img src="/img/logo-sm.png" alt="Apcera" /></p>{{ end }}
-
-                <div class="download-info">
-                  <p>Language: {{ .language }}</p>
-                  {{ if .release_notes }}
-                  <p>Release Notes: {{ .release_notes | safeHTML }}</p>
-                  {{ else }}
-                  <p>No release notes.</p>
-                  {{ end }}
-                  {{ range first 1 .author }}
-                  {{ if .name }}
-                  <p>Author: <a target="_blank" href="{{ .link }}">{{ .name }}</a></p>
-                  {{ end }}
-                  {{ end }}
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-9 col-sm-8 detail-block">
-              <div class="github-buttons">
-              {{ range first 1 .github }}
-              <!-- Watch -->
-              <a class="github-button" href="{{ .link }}" data-icon="octicon-eye" data-style="mega" data-count-href="/{{.user}}/{{.repo}}/watchers" data-count-api="/repos/{{.user}}/{{.repo}}#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch {{.user}}/{{.repo}} on GitHub">Watch</a>
-              <!-- Star -->
-              <a class="github-button" href="{{ .link }}" data-icon="octicon-star" data-style="mega" data-count-href="/{{.user}}/{{.repo}}/stargazers" data-count-api="/repos/{{.user}}/{{.repo}}#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star {{.user}}/{{.repo}} on GitHub">Star</a>
-              <!-- Fork -->
-              <a class="github-button" href="{{ .link }}" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/{{.user}}/{{.repo}}/network" data-count-api="/repos/{{.user}}/{{.repo}}#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork {{.user}}/{{.repo}} on GitHub">Fork</a>
-              {{ end }}
-            </div>
-              <ul class="list-unstyled">
-                {{ range first 1 .github }}
-                <li><a href="{{ .link }}" target="_blank">View on Github</a></li>
-                <li><a href="{{ .link }}/releases/latest" target="_blank">Download Latest</a></li>
-                {{ end }}
-                {{ range .links }}
-                <li><a href="{{ .url }}">{{ .name }}</a></li>
-                {{ end }}
-              </ul>
-            </div>
-          </div>
-          <hr>
-          {{ partial "menu-downloads.html" . }}
-        {{ end }}
-
-      {{ end }}
-      {{ end }}
-
-      {{ else }}
       <div id="download-intro-con" class="row">
         <div class="col-md-12">
           <div class="page-header">
@@ -76,15 +12,10 @@
           <p>Also available are a wide variety of community contributed clients, connectors, and utilities. We are always happy to receive contributions to review - send us a PR, or contact us at info@nats.io to share what you have built with us!</p>
         </div>
       </div>
-      {{ end }}
 
       {{ partial "menu-downloads.html" . }}
 
-      {{ if eq .RelPermalink "/download/" }}
-      {{ range $.Site.Data }}
-
       <hr>
-
       <h2>Connectors and Utilities</h2>
       <div class="table-responsive">
         <table class="table table-striped">
@@ -133,6 +64,14 @@
               <td><a target="_blank" href="https://github.com/pires">Paulo Pires</a></td>
               <td>Community</td>
             </tr>
+
+            <tr>
+              <td><a href="https://github.com/nxtedition/deepstream.io-msg-nats" target="_blank">Deepstream.io connector for NATS</a></td>
+              <td>Deepstream message connector for NATS</td>
+              <td><a target="_blank" href="https://github.com/nxtedition">nxtedition</a></td>
+              <td>Community</td>
+            </tr>
+
             <tr>
               <td><a href="https://github.com/dokku/dokku-nats" target="_blank">Dokku-NATS</a></td>
               <td>NATS plugin for Dokku, a PaaS Platform</td>
@@ -250,9 +189,6 @@
           </tbody>
         </table>
       </div>
-      {{ end }}
-
-      {{ end }}
   </div>
   <div class="external-clients-con col-md-12">
       <p><em>Please <a href="mailto:info@nats.io?subject=NATS External Client">contact us</a> to add your external client to the download list.</em></p>
