Updated some clients and added the clarifai webinar post

--- a/layouts/section/download.html
+++ b/layouts/section/download.html
@@ -85,6 +85,12 @@
               <td>Community</td>
             </tr>
             <tr>
+              <td><a href="https://github.com/vsundupey/nats-elk" target="_blank">NATS Elk</a></td>
+              <td>Utility for forwarding NATS monitoring data to ELK Stack</td>
+              <td><a target="_blank" href="https://github.com/vsundupey">Vladimir Sundupey</a></td>
+              <td>Community</td>
+            </tr>
+            <tr>
               <td><a href="http://fluentbit.io/documentation/0.8/output/nats.html" target="_blank">Fluent Bit</a></td>
               <td>The NATS output connector allows to flush your Fluent Bit records into a NATS Server endpoint</td>
               <td><a target="_blank" href="http://fluentbit.io/">Fluent Bit</a></td>
