Add the NATS Prometheus Exporter

--- a/layouts/section/download.html
+++ b/layouts/section/download.html
@@ -151,6 +151,12 @@
               <td>Community</td>
             </tr>
             <tr>
+              <td><a href="https://github.com/nats-io/prometheus-nats-exporter" target="_blank">NATS Prometheus Exporter</a></td>
+              <td>The official NATS exporter for Prometheus, written in Go. It supports monitoring multiple NATS servers, is highly resilient to network outages, and can be embedded into go applications via an API.  Metrics are exposed through a HTTP(S) interface for Prometheus to collect them.</td>
+              <td>NATS.io team</td>
+              <td>Apcera</td>
+            </tr>            
+            <tr>
               <td><a href="http://bit.ly/1X36qKZ" target="_blank">Rancher NATS</a></td>
               <td>This is an extended version of the official Docker image for nats. It adds support to set up a cluster easily onrancher.</td>
               <td><!--<a target="_blank" href="#"></a>--></td>
