Updating some download content as well as addign a blog post from gopherfest

--- a/layouts/section/download.html
+++ b/layouts/section/download.html
@@ -64,14 +64,12 @@
               <td><a target="_blank" href="https://github.com/pires">Paulo Pires</a></td>
               <td>Community</td>
             </tr>
-
             <tr>
               <td><a href="https://github.com/nxtedition/deepstream.io-msg-nats" target="_blank">Deepstream.io connector for NATS</a></td>
               <td>Deepstream message connector for NATS</td>
               <td><a target="_blank" href="https://github.com/nxtedition">nxtedition</a></td>
               <td>Community</td>
             </tr>
-
             <tr>
               <td><a href="https://github.com/dokku/dokku-nats" target="_blank">Dokku-NATS</a></td>
               <td>NATS plugin for Dokku, a PaaS Platform</td>
@@ -194,7 +192,7 @@
             </tr>
             <tr>
               <td><a href="https://github.com/orus-io/nats-websocket-gw" target="_blank">Websocket Gateway</a></td>
-              <td>A websocket gateway for NATS, usable as a backend for <a target="_blank" href="https://github.com/isobit/websocket-nats">websocket-nats</a>.</td>
+              <td>A websocket gateway for NATS, usable as a backend for elm-nats and websocket-nats.</td>
               <td><a target="_blank" href="https://github.com/orus-io">Orus.io</a></td>
               <td>Community</td>
             </tr>
