Added a gophercon blog post as well as updated the companies on community page

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -839,6 +839,12 @@ html#home-html {
   }
 }
 #blog-post-page {
+  .tweet-embed-con {
+    padding: 10px 0px;
+    iframe {
+      margin: 0px auto;
+    }
+  }
   .embed-responsive {
     margin-bottom: 30px;
   }
