Added Coming Events to the community page

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -31,6 +31,7 @@
 @nats-brand-github-dark:                    #000;
 
 // Variable Overrides
+@brand-info:                                @nats-colour-blue-lite;
 @text-color:                                @nats-brand-gray-dark;
 @font-family-sans-serif:                    'Source Sans Pro', sans-serif;
 @font-family-monospace:                     'Source Code Pro', ;
