Added guest post

--- a/layouts/section/download.html
+++ b/layouts/section/download.html
@@ -167,6 +167,24 @@
               <td>Community</td>
             </tr>
             <tr>
+              <td><a href="https://github.com/canhnt/k8s-nats-streaming" target="_blank">NATS Streaming Server on Kubernetes</a></td>
+              <td>This project contains a Docker image and a Helm chart to run NATS Streaming Server in the Kubernetes cluster. The NATS Streaming Server can run in fault tollerance mode.</td>
+              <td><a target="_blank" href="https://github.com/canhnt">Canh Ngo</a></td>
+              <td>Community</td>
+            </tr>
+            <tr>
+              <td><a href="https://github.com/chop-dbhi/nats-rpc" target="_blank">NATS-RPC Generator</a></td>
+              <td>RPC layer on top of NATS standardizing on Protocol Buffers.</td>
+              <td><a target="_blank" href="https://github.com/chop-dbhi">Department of Biomedical and Health Informatics</a></td>
+              <td>Community</td>
+            </tr>
+            <tr>
+              <td><a href="https://github.com/rapidloop/nrpc" target="_blank">nRPC is like gRPC, but over NATS</a></td>
+              <td>nRPC is an RPC framework like gRPC, but for NATS. It can generate a Go client and server from the same .proto file that you'd use to generate gRPC clients and servers. The server is generated as a NATS MsgHandler.</td>
+              <td><a target="_blank" href="https://github.com/sparrc">Cameron Sparr</a></td>
+              <td>Community</td>
+            </tr>
+            <tr>
               <td><a href="https://github.com/efmr/socket.io-nats" target="_blank">Socket.io-NATS Connector</a></td>
               <td>This connector enables multiple socket.io instances to broadcast and emit events to and from each other through NATS.</td>
               <td><a target="_blank" href="https://github.com/efmr">Edgar Ribeiro</a></td>
