--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -50,7 +50,7 @@
     <script src="/js/index.js"></script>
 
     <!-- Github Buttons -->
-    <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 
     <!-- Google Analytics -->
     <script>
