Added some community connectors and utilities

--- a/layouts/section/download.html
+++ b/layouts/section/download.html
@@ -29,6 +29,12 @@
           </thead>
           <tbody>
             <tr>
+              <td><a href="https://github.com/hemerajs/hemera" target="_blank">Apache Flink</a></td>
+              <td>Allows Apache Flink to send/receive a stream of string based messages to/from NATS.</td>
+              <td><a target="_blank" href="https://github.com/mring33621">Matthew Ring</a></td>
+              <td>Community</td>
+            </tr>
+            <tr>
               <td><a href="https://github.com/nats-io/nats-connector-framework" target="_blank">NATS Connector Framework</a></td>
               <td>A pluggable Java based framework to bridge the NATS messaging system and other technologies.</td>
               <td>NATS.io team</td>
@@ -177,6 +183,12 @@
               <td>RPC layer on top of NATS standardizing on Protocol Buffers.</td>
               <td><a target="_blank" href="https://github.com/chop-dbhi">Department of Biomedical and Health Informatics</a></td>
               <td>Community</td>
+            </tr>
+            <tr>
+              <td><a href="https://github.com/hemerajs/hemera" target="_blank">RPC over NATS</a></td>
+              <td>Provides an RPC and pub/sub framework with first-class support for NATS.</td>
+              <td><a target="_blank" href="https://github.com/Workiva">Workiva</a></td>
+              <td>Workiva</td>
             </tr>
             <tr>
               <td><a href="https://github.com/rapidloop/nrpc" target="_blank">nRPC is like gRPC, but over NATS</a></td>
