--- a/layouts/section/download.html
+++ b/layouts/section/download.html
@@ -209,9 +209,9 @@
               <td>Community</td>
             </tr>
             <tr>
-              <td><a href="https://github.com/joshglendenning/websocket-nats" target="_blank">websocket-nats</a></td>
+              <td><a href="https://github.com/isobit/websocket-nats" target="_blank">websocket-nats</a></td>
               <td>An in-browser websocket client for NATS, a lightweight, high-performance cloud native messaging system.</td>
-              <td><a target="_blank" href="https://github.com/joshglendenning">Josh Glendenning</a></td>
+              <td><a target="_blank" href="https://github.com/isobit">Josh Glendenning</a></td>
               <td>Community</td>
             </tr>
             <tr>
